# brtoy

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README
core/: CMakeLists.txt  core_win32.cpp  vec.cpp
core/include/brtoy/: brtoy.h  container.h  vec.h
examples/: CMakeLists.txt
examples/clear_swapchain/: CMakeLists.txt  clear_swapchain.cpp
examples/gpu_driven_rendering/: CMakeLists.txt  gpu_driven_rendering.cpp  world.hlsl
gfx/: CMakeLists.txt  gfx.cpp  gfx_swapchain.cpp  gfx_utils.cpp  gfx_win32.cpp
gfx/include/brtoy/: gfx.h  gfx_swapchain.h  gfx_utils.h
platform/: CMakeLists.txt  platform.cpp  platform_win32.cpp
platform/include/brtoy/: platform.h
